이미지 하나를 클릭하여 선택 시 다른 이미지를 클릭할 수 없도록 수정

--- a/02-pick-and-clear/style.css
+++ b/02-pick-and-clear/style.css
@@ -54,15 +54,12 @@ header > * {
   margin-bottom: 10px;
 }
 
-#controls label {
-  color: #aeaeae;
+.label {
+  color: rgb(89, 66, 32);
   margin: 0 10px;
   font-size: 20px;
   font-weight: 600;
-}
-
-label.active {
-  color: #333333;
+  transition: all 0.15s;
 }
 
 #photo-wrapper {
@@ -95,6 +92,6 @@ label.active {
 }
       
 footer {
-  flex: 1 0 auto;
-  margin: 15px 0;
+  flex: 1 1 30px;
+  background-color: rgb(205, 190, 152);
 }
