마우스 사용시 포커스링 숨김 및 키보드 이벤트를 삭제하나 tab키 사용시 복구되도록 수정

--- a/02-pick-and-clear/style.css
+++ b/02-pick-and-clear/style.css
@@ -108,6 +108,10 @@ header > * {
   transition: all 0.7s cubic-bezier(0, 1, 0, 1);
 }
 
+.photo.mouse {
+  outline: none;
+}
+
 .photo img {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
